@@ -35,12 +35,6 @@
 		This is the exact same minimal demo, but this time the grid structure and data are obtained from a JSON URL.
 		</p>
 
-		<p><a href="attach/index.html">Attaching grid to an HTML table</a></p>
-		<p>
-		This is again the exact same minimal demo, but this time the grid structure and data are declared in the HTML file.
-		Extra column information (mainly the data type) are given using Javascript.
-		</p>
-
 		<p><a href="jsdata/index.html">Creating grid in Javascript</a></p>
 		<p>
 		Still the same demo, but this time the grid structure and data are created dynamically in Javascript.		
@@ -52,6 +46,12 @@
 		Other combinations are of course possible: the point is that metadata (i.e. the definition of columns) can be loaded apart from the data itself.
 		</p>
 		
+		<p><a href="attach/index.html">Attaching grid to an HTML table</a></p>
+		<p>
+		This is again the exact same minimal demo, but this time the grid data are declared in the HTML file through a classic HTML table.
+		Extra column information (mainly the data type) are given using Javascript.
+		</p>
+
 		<p><a href="simple/index.html">Loading grid from XML (bis)</a></p>
 		<p>
 		Here we come back to the first minimal demo and go one little step further.
