@@ -45,7 +45,7 @@
 				metadata.push({"name":"freelance","label":"FREELANCE","datatype":"boolean","editable":true});
 				metadata.push({"name":"lastvisit","label":"LAST VISIT","datatype":"date","editable":true});
 
-				// we use "load" to load the metadat only 
+				// we use "load" to load the metadata only 
 				editableGrid.load({"metadata": metadata});
 
 				// then we load the actual content from an URL which outputs the data as XML
